# PSA-core

./: API.md  CLAUDE.md  FIELD_GUIDE.md  README.md  SiliconPsycheLabs_Pitch.pptx
app/static/extension/: INSTALL.md  README.md  admin.css  admin.html  admin.js  background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js  sidebar.css  sidebar.html  sidebar.js  update.sh
legal-extension/: README.md  background.js  content.js  generate_icons.py  manifest.json
legal-extension/popup/: popup.css  popup.html  popup.js
scripts/: verify_tutorials.py
sdk-js/: package.json
sdk-js/src/: client.ts  index.ts  models.ts
sdk-js/src/adapters/: langchain.ts  vercel-ai.ts
sdk-python/: CONTRIBUTING.md  README.md  pyproject.toml
sdk-python/examples/: a2a_server.py  crewai_basic.py  langgraph_basic.py  mcp_client.py  vanilla_http.py
sdk-python/psa/: __init__.py  _client_factory.py  client.py  models.py
sdk-python/psa/adapters/: a2a.py  autogen.py  claude_code.py  crewai.py  langfuse.py  langgraph.py  mcp.py
tutorials/: 01-getting-started.md  02-analyzing-conversations.md  03-posture-reference.md  04-developer-quickstart.md  05-drm-and-crisis-detection.md  06-regime-shifts.md  07-psa-v3-agentic.md  08-voice-ai-monitoring.md  09-connectors-and-webhooks.md  10-cpf-cognitive-profiling.md  11-batch-analysis.md  12-sigtrack-incident-mgmt.md  13-red-teaming-with-psa.md  14-testing-agentic-systems.md  README.md
